--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==0.9.2
 blinker==1.4
 click==6.7
+coverage==4.3.4
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
@@ -26,6 +27,7 @@ python-engineio==1.5.4
 python-socketio==1.7.5
 six==1.10.0
 SQLAlchemy==1.1.10
+stomp.py==4.1.18
 visitor==0.1.3
 Werkzeug==0.12.2
 WTForms==2.1
