--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Script==2.0.5
 Flask-SocketIO==2.8.6
 Flask-SQLAlchemy==2.2
 Flask-WTF==0.14.2
+future==0.16.0
 gevent==1.2.2
 greenlet==0.4.12
 itsdangerous==0.24
@@ -21,6 +22,8 @@ Jinja2==2.9.6
 Mako==1.0.6
 MarkupSafe==1.0
 numpy==1.13.0
+PyInstaller==3.2.1
+pypiwin32==220
 python-dateutil==2.6.0
 python-editor==1.0.3
 python-engineio==1.5.4
