--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.0.4
 Flask-Moment==0.5.1
+Flask-MySQLdb==0.2.0
 Flask-Script==2.0.5
 Flask-SocketIO==2.8.6
 Flask-SQLAlchemy==2.2
@@ -21,9 +22,8 @@ itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.6
 MarkupSafe==1.0
+mysqlclient==1.3.10
 numpy==1.13.0
-PyInstaller==3.2.1
-pypiwin32==220
 python-dateutil==2.6.0
 python-editor==1.0.3
 python-engineio==1.5.4
